Cargo parancsok hívása.

--- a/dolgozat/fejezetek/4_0_implementacio.tex
+++ b/dolgozat/fejezetek/4_0_implementacio.tex
@@ -4,7 +4,10 @@
 
 \Section{Minimális program: egy fájlt kezelő kódszerkesztő}
 
-\includegraphics[width=\textwidth]{program-mvp}
+\begin{figure}[h]
+    \includegraphics[width=0.8\textwidth]{program-mvp}
+    \centering
+\end{figure}
 
 A program implementációját egy olyan minimális életképes termék elkészítésével kezdjük,
 ami meg tud nyitni egyszerre egy fájlt, annak tartalmát megfelelően dekorálja,
