--- a/dolgozat/dolgozat.tex
+++ b/dolgozat/dolgozat.tex
@@ -5,6 +5,7 @@
 \usepackage{listings-rust}
 \usepackage{svg}
 \usepackage[hyphens]{url}
+\usepackage{wrapfig}
 
 \begin{document}
 \include{cimlap/cimlap}
