--- a/dolgozat/hasznalat/hasznalat.tex
+++ b/dolgozat/hasznalat/hasznalat.tex
@@ -11,19 +11,28 @@
 \noindent A szakdolgozatomhoz mellékelt adathordozó eszközön található adatok struktúrája:
 
 \begin{itemize}
-    \item \texttt{dolgozat/}
-    \begin{itemize}
-        \item \texttt{forras/}: A szakdolgozat \LaTeX{} formátumú forrása, fejezetekre bontva.
-        \item \texttt{dolgozat.pdf}: A szakdolgozat megformázott változata.
-        \item \texttt{kiiras.rtf}: A szakdolgozathoz járó feladatkiírás.
-        \item \texttt{osszefoglalo.tex}: A szakdolgozatból kiemelt \LaTeX{} formátumú összefoglaló magyar része.
-        \item \texttt{osszefoglalo.pdf}: A szakdolgozatból kiemelt összefoglaló magyar része, megformázott változatban.
-        \item \texttt{summary.tex}: A szakdolgozatból kiemelt \LaTeX{} formátumú összefoglaló angol része.
-        \item \texttt{summary.pdf}: A szakdolgozatból kiemelt összefoglaló angol része, megformázott változatban.
-    \end{itemize}
-    \item \texttt{rozsda\_ide/}: A program, ami a szakdolgozat témájaként szerepelt.
-    \begin{itemize}
-        \item \texttt{rozsda\_ide}: A program futtatható változata (Linuxon).
-        \item \texttt{src/}: A program forráskódja.
-    \end{itemize}
+    \item \texttt{dolgozat.pdf}: A teljes szakdolgozat, \LaTeX{} segítségével készítve.
+    \item \texttt{rozsda-ide/}: A program ládája, benne a program forráskódjával.
+    \item \texttt{rozsda-ide}: A program futtatható változata, 64-bites Linuxra.
 \end{itemize}
+
+\noindent A program futtatásához a következő könyvtárak szükségesek:
+
+\begin{itemize}
+    \item \texttt{libgtk-3}, legalább 3.22-es verzió.
+    \item \texttt{libgdk-3}
+    \item \texttt{libpango-1.0}
+    \item \texttt{libgtksourceview-3}, legalább 3.18-as verzió.
+\end{itemize}
+
+\noindent A forráskód lefordításához a fenti könyvtárak \texttt{-dev} verziója szükséges,
+továbbá a következő Rust követelmények:
+
+\begin{itemize}
+    \item Rust
+    \item \texttt{rustup}
+    \item Cargo
+\end{itemize}
+
+\noindent A következő paranccsal, illetve a Rust oldalán (\url{rust-lang.com})
+beszerezhető mind a három egyszerre: \fbox{\texttt{curl https://sh.rustup.rs -sSf | sh}}
