Betűzési hibák javítása.

--- a/dolgozat/fejezetek/1_bevezetes.tex
+++ b/dolgozat/fejezetek/1_bevezetes.tex
@@ -26,7 +26,7 @@ Mint azt már említettük, sok szövegszerkesztő ajánl IDE-szerű szolgáltat
 A Rust közössége ezeket le is jegyzi, és egy nyilvánosan elérhető, 
 \emph{Are we (I)DE yet?}\cite{ideyet} című weboldalon összegezi.
 
-Mint azt a weboldalon láthatjuk, támogatás a Rust-hoz elérhető a legelterjettebb szövegszerkesztőkben, 
+Mint azt a weboldalon láthatjuk, támogatás a Rust-hoz elérhető a legelterjedtebb szövegszerkesztőkben, 
 mint az Atom, Sublime Text, Visual Studio Code, stb. 
 A legutóbbi kiemelendő, mivel a táblázat alapján látszólag minden meg van benne.
 
@@ -57,7 +57,7 @@ Az előző elemzésekből kitűnhet, hogy nyelvi szinten a Rust készen áll má
 
 Így a feladat a következő: létrehozni egy olyan IDE-t, ami a Rust nyelvet elsőrendű nyelvként kezeli, és annak előnyeire játszik. 
 Fontos, hogy az IDE kényelmessé tegye a nyelvben való programozást, így a fejlesztés során gyakori kell, hogy legyen az iterálás a felhasználó munkamenetén. 
-Fejleszteni kell majd olyan szolgáltatásokat, amik könynyebbé teszik a nyelv sajátosságainak megértését, például az utalások élettartamának nyomonkövetését 
+Fejleszteni kell majd olyan szolgáltatásokat, amik könnyebbé teszik a nyelv sajátosságainak megértését, például az utalások élettartamának nyomon követését 
 (ezeket a sajátosságokat majd bővebben bemutatjuk \myaref{sec:rust} fejezetben), és amik figyelmeztetnek a gyakori Rust programozási hibákra.
 
 % TODO: Itt egy olyan leírásnak kellene majd szerepelnie, ami felhívja az olvasó figyelmét, hogy
