--- a/dolgozat/fejezetek/5_teszt.tex
+++ b/dolgozat/fejezetek/5_teszt.tex
@@ -105,7 +105,7 @@ A Rozsda IDE ládájának megnyitása után kipróbálhatjuk a Cargo parancsokat
 Mivel ahhoz, hogy a Rozsda IDE-t futtassam, le kellett fordítanom,
 így először a \textit{Cargo $\,\to\,$ Takarítás} lehetőséget tesztelem le.
 
-Bár egy felugró albak megjelenik, a \texttt{cargo clean} parancs nem ad kimenetet,
+Bár egy felugró ablak megjelenik, a \texttt{cargo clean} parancs nem ad kimenetet,
 így csak egy felugró ablakot kapunk, ami értesít minket a parancs lefutásáról.
 
 Ezek után, ha módosítjuk a \texttt{main.rs}-t, hogy hívja meg az újonnan készített
