--- a/dolgozat/fejezetek/6_osszegzes.tex
+++ b/dolgozat/fejezetek/6_osszegzes.tex
@@ -24,7 +24,7 @@ Az első projekt elkészítése során sokan megrémülnek a nyelv látszólagos
 de ellentétben egy emberrel, a fordító "figyelme" nem lankad még a tizedik projektnél sem,
 amikor már a tapasztalt felhasználó örömmel fogadja a fordító javaslatait.
 
-Bár a Rust használata egyre könnyebbbé válik, ahogy az idő telik, a GTK Rust binding használata pont az ellentéte ennek.
+Bár a Rust használata egyre könnyebbé válik, ahogy az idő telik, a GTK Rust binding használata pont az ellentéte ennek.
 A dolgozat során sokszor említettem, hogy a GTK-s objektumok nem tisztelik a Rust szabályait,
 és emiatt a GTK eredetű struktúrák helyes használata sokszor rejtélyes vagy logikának ellentmondó
 (például a klónozható struktúrák).
@@ -32,7 +32,7 @@ A dolgozat során sokszor említettem, hogy a GTK-s objektumok nem tisztelik a R
 Ezt a problémát nem segíti a \texttt{gtk-rs} láda dokumentációja.
 A használati útmutatót régen frissítették, és a legtöbb bemutatott példa nem fut a jelenlegi verziókban,
 az API dokumentáció pedig hiányos magyarázatokban, és néhol a magyarázat a C nyelvre utal, és annak használatát mutatja be.
-Sőt, a GTK öröklődési szabályainak megtartása érdekében a fontosabb metódushívásokat, amiket a felhasználó kereshet,
+Sőt, a GTK öröklődési szabályainak megtartása érdekében a fontosabb metódus hívásokat, amiket a felhasználó kereshet,
 nem a megadott struktúrában kell keresni, hanem valamelyik tulajdonságban, amit implementál.
 Gyakori az, hogy egy \texttt{Valami} struktúra 
 leggyakrabban használt metódusát a \texttt{ValamiExt} tulajdonságban kell keresni.
